tests/ucc/type/good/array-vs-ptr-2.c
int main(void)
{
    int a[9];
    int *c;

    c = a;

    return 0;
}
