tests/ucc/type/bad/float-promotion-to-ptr.c
int main(void)
{
    int a;
    float b;
    int *c;

    c = a + b;

    return  0;
}
